[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/target.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/box.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/main.gd" type="Script" id=5]
[ext_resource path="res://scenes/hooktarget.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/goal.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/endMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/house_extension_1.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/door.tscn" type="PackedScene" id=10]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.858824, 0.858824, 0.858824, 1 )
sky_horizon_color = Color( 1, 1, 1, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
fog_color = Color( 0.737255, 0.737255, 0.737255, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 0.0

[sub_resource type="CubeMesh" id=3]
size = Vector3( 256, 1, 256 )

[sub_resource type="OpenSimplexNoise" id=4]
seed = 30
octaves = 9
period = 80.0
persistence = 0.948
lacunarity = 3.3

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.65098, 0.513726, 0.513726, 1 )
albedo_texture = SubResource( 5 )

[sub_resource type="BoxShape" id=7]

[node name="main" type="Spatial"]
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.999998, -0.00134177, 0.0013296, 0.00133683, 0.999992, 0.00370042, -0.00133457, -0.00369863, 0.999992, -82.7642, 9.89232, -1.96767 )
arrow = ExtResource( 4 )

[node name="floor" type="StaticBody" parent="."]

[node name="lvl" type="MeshInstance" parent="floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00394297, 0.00334775, 0.00157785 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="floor"]
transform = Transform( 128, 0, 0, 0, 0.5, 0, 0, 0, 128, 0.004, 0.003, 0.002 )
shape = SubResource( 7 )

[node name="targets" type="Spatial" parent="."]
transform = Transform( 0.997998, 0, 0, 0, 0.997998, 0, 0, 0, 0.997998, 0, 0, 0 )

[node name="target1" parent="targets" instance=ExtResource( 2 )]
transform = Transform( 0.151865, 0, -0.988402, 0, 1, 0, 0.988402, 0, 0.151865, -11.3095, 17.2888, 21.3709 )

[node name="target2" parent="targets" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.6341, 26.4777, 38.9175 )
show_holder = false

[node name="target3" parent="targets" instance=ExtResource( 2 )]
transform = Transform( 0.028602, 0, -0.999591, 0, 1, 0, 0.999591, 0, 0.028602, -59.0031, 2.43533, 64.4046 )

[node name="target4" parent="targets" instance=ExtResource( 2 )]
transform = Transform( 0.563584, 0, 0.826059, 0, 1, 0, -0.826059, 0, 0.563584, -39.5661, 2.3686, -42.8027 )

[node name="target" parent="targets" instance=ExtResource( 2 )]
transform = Transform( -0.800094, 0, 0.599876, 0, 1, 0, -0.599876, 0, -0.800094, -87.3428, 9.88183, -10.1773 )

[node name="hooktargets" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145691, 0.149628, -0.460493 )

[node name="hooktarget" parent="hooktargets" instance=ExtResource( 6 )]
transform = Transform( -0.016545, 0, -0.999863, 0, 1, 0, 0.999863, 0, -0.016545, -38.2445, 42.4979, 18.0925 )

[node name="hooktarget2" parent="hooktargets" instance=ExtResource( 6 )]
transform = Transform( 0.0937261, 0, -0.995598, 0, 1, 0, 0.995598, 0, 0.0937261, -79.761, 20.6566, 56.2563 )

[node name="hooktarget3" parent="hooktargets" instance=ExtResource( 6 )]
transform = Transform( -0.054497, 0, 0.998514, 0, 1, 0, -0.998514, 0, -0.054497, -37.536, 41.8252, -43.1166 )

[node name="hooktarget4" parent="hooktargets" instance=ExtResource( 6 )]
transform = Transform( 0.0064227, 0.999979, 0, -0.999979, 0.0064227, 0, 0, 0, 1, -55.2899, 2.25997, -63.398 )

[node name="hooktarget5" parent="hooktargets" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -79.7469, 13.4216, 9.33144 )

[node name="houses" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.155899, 0, 0.0585938 )

[node name="box" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.16138, 0, 0, 0, 7.06113, 0, 0, 0, 9.70414, -84.0841, 0.89751, -2.76846 )

[node name="box5" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.16138, 0, 0, 0, 7.06113, 0, 0, 0, 3.60058, -92.3115, 0.89751, -8.6217 )

[node name="box18" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.16138, 0, 0, 0, 0.697964, 0, 0, 0, 10.0662, -84.0841, 13.4853, -3.16418 )

[node name="box22" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.16138, 0, 0, 0, 0.697964, 0, 0, 0, 4.18008, -93.3685, 13.4853, -8.90806 )

[node name="box4" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 0.587542, 0, 0, 0, 3.34519, 0, 0, 0, 0.473706, -79.3912, 10.4759, 1.03859 )

[node name="box16" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 0.587542, 0, 0, 0, 3.34519, 0, 0, 0, 6.45161, -89.1187, 10.4759, 0.343195 )

[node name="box23" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 0.587542, 0, 0, 0, 3.34519, 0, 0, 0, 4.48635, -97.0737, 10.4759, -8.46994 )

[node name="box17" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 9.72882, 0, 0, 0, 3.34519, 0, 0, 0, 0.420317, -88.5067, 10.4759, -12.453 )

[node name="box21" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.04063, 0, 0, 0, 3.34519, 0, 0, 0, 0.420317, -94.0456, 10.4759, -5.47706 )

[node name="box19" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 1.10579, 0, 0, 0, 3.34519, 0, 0, 0, 0.420317, -79.9559, 10.4759, 6.43929 )

[node name="box20" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 1.95568, 0, 0, 0, 3.34519, 0, 0, 0, 0.420317, -87.6196, 10.4759, 6.53247 )

[node name="box15" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 0.587542, 0, 0, 0, 3.34519, 0, 0, 0, 0.473706, -79.3912, 10.4759, 6.40493 )

[node name="box6" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 0.587542, 0, 0, 0, 3.34519, 0, 0, 0, 0.473706, -79.3912, 10.4759, -6.0176 )

[node name="box7" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 11.5637, 0, 0, 0, 8.09398, 0, 0, 0, 18.3373, -18.0735, 7.43555, 12.4045 )

[node name="box14" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.37295, 0, 0, 0, 9.44053, 0, 0, 0, 4.93657, -15.1328, 20.7268, 39.014 )

[node name="box13" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.98731, 0, 0, 0, 23.9575, 0, 0, 0, 6.88146, -37.4402, 20.5234, 26.3562 )

[node name="box24" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 5.98731, 0, 0, 0, 23.9575, 0, 0, 0, 6.88146, -35.9423, 20.5234, -52.4236 )

[node name="box8" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 10.9837, 0, 5.73437, 0, 8.09398, 0, -3.61615, 0, 17.4176, -18.0735, 8.21834, -27.4433 )

[node name="box9" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 11.5033, 0, 1.8722, 0, 8.09398, 0, -1.18063, 0, 18.2415, -13.7573, 5.43505, 50.4221 )

[node name="box10" parent="houses" instance=ExtResource( 3 )]
transform = Transform( -0.787917, 0, 18.2947, 0, 8.09398, 0, -11.5368, 0, -1.24945, -82.2365, 5.43505, 66.1707 )

[node name="box11" parent="houses" instance=ExtResource( 3 )]
transform = Transform( -0.469211, 0, 10.8946, 0, 8.09398, 0, -11.5368, 0, -1.24945, -37.2412, 5.43505, 66.1707 )

[node name="box12" parent="houses" instance=ExtResource( 3 )]
transform = Transform( -0.343566, 0, 7.97729, 0, 4.64762, 0, -9.03364, 0, -0.978354, -74.8579, 17.8623, 66.1707 )

[node name="box2" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 0.541442, 0, 0, 0, 0.483988, 0, 0, 0, 9.81339, -79.2113, 7.8768, -2.75166 )

[node name="box3" parent="houses" instance=ExtResource( 3 )]
transform = Transform( 4.88278, 0, 0, 0, 0.120802, 0, 0, 0, 1.17449, -84.2898, 7.8768, 7.65182 )

[node name="goal" parent="." instance=ExtResource( 7 )]
transform = Transform( 18.0031, 0, -0.295159, 0, 5.43379, 0, 0.2053, 0, 21.7225, -54.5393, 0.361819, -51.7854 )

[node name="endMenu" parent="." instance=ExtResource( 8 )]
visible = false

[node name="hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="targetsLabel" type="Label" parent="hud"]
anchor_right = 0.317
anchor_bottom = 0.222
margin_top = 5.0
margin_right = 0.391998
margin_bottom = 10.12

[node name="timeElapsedLabel" type="Label" parent="hud"]
margin_left = 1.0
margin_top = 60.0
margin_right = 41.0
margin_bottom = 74.0

[node name="Spatial" parent="." instance=ExtResource( 9 )]
transform = Transform( -3.06694, 0, -2.6812e-07, 0, 3.06694, 0, 2.6812e-07, 0, -3.06694, -77.126, 0.5, -8.503 )

[node name="door" parent="Spatial" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.48, 0, -0.122 )
